# adaptix-aiohttp

./: LICENSE  README.md  example.py  handlers.py  models.py  pyproject.toml  todo_client.py
examples/: aiohttp_custom.py  example_models.py  example_todo_client.py  fastapi_simple_di.py  starlette_raw_response.py
src/route_wrapper/: __init__.py
src/route_wrapper/common/: __init__.py  base_wrapper.py  introspection.py  provide_response_by_factory.py  route.py  route_wrapper.py  save_signature.py  view_wrapper.py  web_provider.py
src/route_wrapper/common/parser/: __init__.py  body_getter.py  cookies_getter.py  headers_getter.py  params_getter.py  params_parser.py  query_getter.py
src/route_wrapper/common/parser/common/: getter_chain.py  getter_chain_request.py  input.py  source.py
src/route_wrapper/common/protocols/: dumper.py  loader.py  models.py  request.py  web_response_factory.py
src/route_wrapper/integrations/adaptix/: __init__.py  dumper.py  loader.py  provider.py
src/route_wrapper/integrations/aiohttp/: __init__.py  provider.py  request_adapter.py  response_factory.py
src/route_wrapper/integrations/aiohttp/wrappers/: adaptix.py  pydantic.py
src/route_wrapper/integrations/fastapi/: __init__.py  provider.py  request_adapter.py  response_factory.py
src/route_wrapper/integrations/fastapi/wrappers/: adaptix.py
src/route_wrapper/integrations/pydantic/: dumper.py  loader.py  provider.py
src/route_wrapper/integrations/starlette/: provider.py  request_adapter.py  response_factory.py
src/route_wrapper/integrations/starlette/wrappers/: adaptix.py
